Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-9250

Crash when closing many editors with Ctrl+W

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • Qt Creator 2.8.0-beta
    • Qt Creator 2.8.0-beta
    • C/C++/Obj-C++ Support
    • None
    • Windows XP SP3, Debian Linux
    • 934cea560dea7bd58895751f2ce9256ea7441f03

      • Open many editors.
      • Press and hold Ctrl+W

      Reproduces on Windows and Linux.

      Backtrace:

      Thread 10:
      0	QMutex::lock()	/usr/lib/i386-linux-gnu/libQtCore.so.4		0xb70c8660	
      1	QMutex::lockInline	qmutex.h	198	0xb242dd69	
      2	QMutexLocker::QMutexLocker	qmutex.h	109	0xb242dcb2	
      3	CppTools::CppEditorSupport::recalculateSemanticInfoNow	cpptoolseditorsupport.cpp	441	0xb243ceae	
      4	CppTools::CppEditorSupport::recalculateSemanticInfoDetached_helper	cpptoolseditorsupport.cpp	465	0xb243d154	
      5	QtConcurrent::StoredInterfaceMemberFunctionCall1<void, void (CppTools::CppEditorSupport::*)(QFutureInterface<void>&, CppTools::SemanticInfo::Source), CppTools::CppEditorSupport, CppTools::SemanticInfo::Source>::run	runextensions.h	135	0xb24421c2	
      6	??	/usr/lib/i386-linux-gnu/libQtCore.so.4		0xb70c0914	
      7	??	/usr/lib/i386-linux-gnu/libQtCore.so.4		0xb70cdf00	
      8	start_thread	pthread_create.c	304	0xb7030c39	
      9	clone	clone.S	130	0xb6e6e78e
      
      
      Thread 9:
      0	CPlusPlus::Symbol::visitSymbol	Symbol.cpp	130	0xb230e815	
      1	CPlusPlus::Symbol::visitSymbol	Symbol.cpp	139	0xb230e867	
      2	CPlusPlus::SymbolVisitor::accept	SymbolVisitor.cpp	33	0xb2315453	
      3	CPlusPlus::CreateBindings::process	LookupContext.cpp	1334	0xb2345920	
      4	CPlusPlus::ClassOrNamespace::flush	LookupContext.cpp	1222	0xb2346b8a	
      5	CPlusPlus::ClassOrNamespace::lookupType_helper	LookupContext.cpp	764	0xb234aa4f	
      6	CPlusPlus::ClassOrNamespace::lookupType	LookupContext.cpp	712	0xb234b287	
      7	CPlusPlus::CreateBindings::lookupType	LookupContext.cpp	1323	0xb234b944	
      8	CPlusPlus::CreateBindings::lookupType	LookupContext.cpp	1310	0xb234b9f9	
      9	CPlusPlus::LookupContext::lookup	LookupContext.cpp	447	0xb234dadb	
      10	CPlusPlus::ResolveExpression::visit	ResolveExpression.cpp	457	0xb233df07	
      11	??			0xa99fbc8c

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kosjar Nikolai Kosjar
            orgads Orgad Shaneh
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes